syntax = "proto3";

package events;

import "TransactionDomain.proto";

option java_multiple_files = true;
option java_package = "fima.events.transaction";
option java_outer_classname = "TransactionEventsProtos";

message TransactionAddedEvent {
    domain.Transaction transaction = 1;
}