syntax = "proto3";

package services;

import "TransactionDomain.proto";

option java_multiple_files = true;
option java_package = "fima.services.transaction";
option java_outer_classname = "TransactionServiceProtos";

message GetTransactionRequest {
    int32 id = 1;
}

message GetTransactionResponse {
    domain.Transaction transaction = 1;
}

message GetRecentTransactionsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetRecentTransactionResponse {
    repeated domain.Transaction transactions = 1;
}

message InsertTransactionRequest {
    domain.RawTransaction transaction = 1;
}

message InsertTransactionResponse {
    domain.RawTransaction transactions = 1;
}

message DeleteTransactionRequest {
    int32 id = 1;
}

message DeleteTransactionResponse {
}

service TransactionService {

    rpc getTransaction(GetTransactionRequest) returns (GetTransactionResponse) {}

    rpc getRecentTransactions(GetRecentTransactionsRequest) returns (GetRecentTransactionResponse) {}

    rpc insertTransaction(InsertTransactionRequest) returns (InsertTransactionResponse) {}

    rpc deleteTransaction(DeleteTransactionRequest) returns (DeleteTransactionResponse) {}

}
